<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="bottom"
    android:background="@color/transparent">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/dialog_circle_bg"
        android:layout_margin="7dp">

        <TextView
            android:id="@+id/tv_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_dialog_more"
            android:textSize="18sp"
            android:gravity="center"
            android:paddingTop="@dimen/dp_17"
            android:paddingBottom="@dimen/dp_17"
            android:textColor="@color/col_888888"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/col_cccccc"/>
        <TextView
            android:id="@+id/tv_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_dialog_report"
            android:textSize="18sp"
            android:gravity="center"
            android:paddingTop="@dimen/dp_17"
            android:paddingBottom="@dimen/dp_17"
            android:textColor="@color/col_fe0000"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_dialog_cancel"
        android:textSize="18sp"
        android:textColor="@color/common_cancel_text_color_blue"
        android:gravity="center"
        android:paddingTop="@dimen/dp_17"
        android:paddingBottom="@dimen/dp_17"
        android:background="@drawable/dialog_circle_bg"
        android:layout_margin="7dp"
        />
</LinearLayout>